--- a/serverless.yml
+++ b/serverless.yml
@@ -21,25 +21,39 @@ provider:
             - "sqs:sendMessage"
           Resource:
             - Fn::GetAtt: [OrderstoSendQueue, Arn]
-
+        - Effect: "Allow"
+          Action:
+            - "dynamodb:PutItem"
+            - "dynamodb:GetItem"
+            - "dynamodb:UpdateItem"
+          Resource:
+            - Fn::GetAtt: [OrdersTable, Arn]
 functions:
   newOrder:
     handler: handler.newOrder
     environment:
       PENDING_ORDER_QUEUE_URL:
         Ref: PendingOrderQueue
+      ORDERS_TABLE:
+        Ref: OrdersTable
     events:
       - httpApi:
           path: /order
           method: post
   getOrder:
     handler: handler.getOrder
+    environment:
+      ORDERS_TABLE:
+        Ref: OrdersTable
     events:
       - httpApi:
           path: /order/{orderId}
           method: get
   prepOrder:
     handler: handler.prepOrder
+    environment:
+      ORDERS_TABLE:
+        Ref: OrdersTable
     events:
       - sqs:
           arn:
@@ -61,3 +75,16 @@ resources: # Define the SQS queue as a resource CloudFormation template
       Type: AWS::SQS::Queue
       Properties:
         QueueName: ordersToSendQueue
+    OrdersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Orders
+        AttributeDefinitions:
+          - AttributeName: orderId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: orderId
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
